# Debate-Judge-Bias-Calculator

./: .gitignore  CHANGELOG.md  DJBCalc.py  Gender.py  Home.py  Judge.py  Kanban.md  Lev Shuster.bias  Plan.md  README.md  TODO.md  analysis.py  api.py  database_structure.dbml  from_tab.py  gender.py  gender_test.py  get-csv.py  judge_stats.py  names.cache  scrape.py  store.py  structs.py  test_case_template.testJudge.bias
Back End/Database/: database_structure.dbml  debate_bias_calc.sql  readme.md
Back End/Database/Query Development/: Votes to Gender.sql
Backup/: from_tab.py
Front End/GUI/: Home.py  main.py  orchestration.ipynb  orchistration.ipynb  readme.md  requirements.txt
Front End/GUI/pages/: 0_Scrape Judge.py  1_Add_Tournament_From_url.py  1_Scrape Tournaments.py  1_Tournaments.py  2_Analyze Judges at a Tournament.py  3_Analyze Tournament.py  3_Custom Query.py  future pages.txt
Helper Functions/Python/: scrape_debaters_and_judges.py  scrape_division_info.py  scrape_judge.py  scrape_tournament_info.py
Old/: Gender.py  from_tab.py  judge_stats.py  test_case_template.testJudge.bias
Results/: Dave Kerpen.bias  Laura Livingston.bias  Lev Shuster.bias  Todd Mincks.bias
earlier work/Backup/: Judge.py
earlier work/Results/: Jennifer Johnson.bias  Lev2 Shuster2.bias  Sam Daily.bias
earlier work/scrape/: Judge Lev Shuster.json
pages/: 1_Selection.py  2_Check My Name.py
scrape/: CLI Commands.md  Cargo.toml
scrape/src/: README.md  api_and_storage.rs  args.rs  dict_thread_safe_api_and_storage.rs  main.rs  scrape.rs  search_for_judge.rs  structs.rs
(+15 files in other folders)
