[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.9", features = ["derive", "suggestions", "usage"] }
rayon = "1.7.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
special = "0.10.2"
statrs = "0.16.0"
strum = "0.24.1"
strum_macros = "0.24.3"
table-extract = "0.2.2"

tokio = "1.25.0"
